--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,16 @@
-name = "remix-cloudflare-workers"
-type = "javascript"
+name = "blog"
 
-zone_id = ""
 account_id = ""
-route = ""
 workers_dev = true
+main = "./build/index.js"
+compatibility_date = "2022-05-13"
 
 [site]
 bucket = "./public"
-entry-point = "."
 
 [build]
 command = "npm run build"
 
-[build.upload]
-format="service-worker"
+[[r2_buckets]]
+binding = 'BLOG_POSTS'
+bucket_name = 'blog-posts'
